force-app/main/default/objects/Contact/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <description>M(男性) or F(女性)</description>
    <label>性別</label>
    <length>2</length>
    <type>Text</type>
</CustomField>