force-app/main/default/objects/Contact/fields/ShanonDmOk__c.field-meta.xml
<CustomField>
    <fullName>ShanonDmOk__c</fullName>
    <label>シャノン DM許可</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望する</fullName>
            </value>
            <value>
                <fullName>null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>