force-app/main/default/objects/Contact/fields/TagsForMarketing__c.field-meta.xml
<CustomField>
    <fullName>TagsForMarketing__c</fullName>
    <description>属性・行動履歴に基づく顧客へのタグ付け</description>
    <label>マーケティング用タグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>