force-app/main/default/objects/Contact/fields/ToyokeizaiId__c.field-meta.xml
<CustomField>
    <fullName>ToyokeizaiId__c</fullName>
    <description>SSO対応後は、シャノン・IQ-Formからも東経IDがインプットされる</description>
    <externalId>true</externalId>
    <label>会員ID(東洋経済用会員ID)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>