force-app/main/default/objects/Contact/fields/ToyokeizaiIdHash__c.field-meta.xml
<CustomField>
    <fullName>ToyokeizaiIdHash__c</fullName>
    <label>東洋経済IDハッシュ値</label>
    <length>32</length>
    <type>Text</type>
</CustomField>