force-app/main/default/objects/Contact/recordTypes/Account_PersonalAccount.recordType-meta.xml
<RecordType>
    <fullName>Account_PersonalAccount</fullName>
    <active>true</active>
    <label>法人かつ個人</label>
</RecordType>