force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ID__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ToyokeizaiId__c</columns>
    <columns>MarketoNotSync__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MarketoNotSync__c</field>
        <operation>notEqual</operation>
        <value>Y</value>
    </filters>
    <filters>
        <field>MarketoNotSync__c</field>
        <operation>notEqual</operation>
        <value>N</value>
    </filters>
    <filters>
        <field>SansanLastName__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>すべての取引先責任者</label>
</ListView>